Use concise methods for creating lists and map